[package]
name = "glpipewait"
version = "0.1.0"
authors = ["hiromu.nakamura <abctail30@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Wait until GitLab pipeline finishes."
documentation = "https://github.com/po3rin/glpipewait/blob/main/README.md"
repository = "https://github.com/po3rin/glpipewait"
homepage = "https://github.com/po3rin/glpipewait"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["env"]}
serde = { version = "1.0.144", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
surf = "2.3.2"
url = "2.3.1"
exitcode = "1.1.2"
